Blender freezes permanently when pausing animation with multiframe on - macOS? #129183
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#129183
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: macOS-14.6.1-arm64-arm-64bit 64 Bits
Graphics card: Metal API Apple M2 1.2
Blender Version
Broken: version: 4.2.2 LTS, branch: blender-v4.2-release, commit date: 2024-09-23 12:18, hash:
c03d7d98a413
Worked: Don't know
Short description of error
Blender consistently freezes if I open the attached file and pause the animation. I have to force quit and restart to recover.
Exact steps for others to reproduce the error
If I turn off multiframe first, it works correctly and does not freeze.
I can confirm the issue on my Mac, but not my NVIDIA GPU + Windows machine in 4.2.3. But with 4.3 it's fixed. I will set this to high severity as it's just as bad as a crash in my opinion.
I will bisect to see if I can figure out if the fix in 4.3 was from GPv3 or a different small bug fix that could be backported to 4.2.X.
System Information
Operating system: macOS-14.6.1-arm64-arm-64bit 64 Bits
Graphics card: Metal API Apple M1 Pro 1.2
Blender version: 4.2.3 LTS, branch: blender-v4.2-release, commit date: 2024-10-14 15:20, hash:
0e22e4fcea03
Blender freezes permanently when pausing animation with multiframe onto Blender freezes permanently when pausing animation with multiframe on - macOS?Bisecting does point to Grease Pencil 3 being the fix in 4.3
I have attached a simplifed file. I will note that the behaviour is slightly different with the simplified file. Blender freezes, but the macOS "beach ball" doesn't appear.